tests/NormalTests/paczka1/small_fuzzy/23752898.err
Error in line 9: S469 A675 19,9
Error in line 4: yXBlRtfDcd S469 69,2
